[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dockpoint"
version = "0.1.0a0"
description = "Cross-platform primitives for the auto-spawning client-daemon pattern"
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "posix-or-nt",
    "typing; python_version < '3.5'",
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/dockpoint"
"Bug Tracker" = "https://github.com/jifengwu2k/dockpoint/issues"
